src/objects/UserProfile__c.object
<CustomObject>
    <description>Object for the user profile</description>
    <fields>
        <fullName>Date_Activated__c</fullName>
        <description>Date when the account was activated</description>
        <label>Date Activated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailNewExam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends an email if there is a new exam added</description>
        <inlineHelpText>Sends an email if there is a new exam added</inlineHelpText>
        <label>Email on new exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailResults__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Emails the results after taking an exam</description>
        <inlineHelpText>Emails the results after taking an exam</inlineHelpText>
        <label>Email test results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Result_after_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Result after Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the user</description>
        <externalId>true</externalId>
        <inlineHelpText>Email of the user</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First name</description>
        <inlineHelpText>First name</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last name of the user</description>
        <inlineHelpText>Last name of the user</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Country of origin</description>
        <inlineHelpText>Country of origin</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <description>Token used for authentication.</description>
        <label>Token</label>
        <type>TextArea</type>
    </fields>
    <label>User Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>User ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Location</fullName>
        <active>true</active>
        <description>Validation to check if the user has specified his/her location.</description>
        <errorConditionFormula>ISPICKVAL(Location__c, &apos;Select Location&apos;)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Please select location.</errorMessage>
    </validationRules>
</CustomObject>